carols website updated

--- a/public/about.html
+++ b/public/about.html
@@ -42,17 +42,17 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto active" href="about.html">About</a></li>
           <li><a class="nav-link  scrollto" href="gallery.html">Gallery</a></li>
-          <li><a class="nav-link" href="about.html">About</a></li>
-          <li class="dropdown"><a href="#journal"><span>My Work</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link  scrollto" href="resources.html">Carol in Action</a></li>
+          <li class="dropdown"><a href="index.html#journal"><span>My Work</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="arts-and-education.html">Arts and Education</a></li>
               <li><a href="educational-puppetry.html">Educational Pupptery</a></li>
               <li><a href="selected-work.html">Selected Work</a></li>
             </ul>
           </li>
-          <li><a class="nav-link  scrollto" href="resources.html">Resources</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -63,8 +63,182 @@
 
   <main id="main">
 
-    <!-- ======= Portfolio Details Section ======= -->
-    <section id="about" class="about-page">
+    <div id="about-page" class="paddsections">
+      <!-- About-->
+      <!-- Content section 1-->
+      <div class="container">
+        <div class="section-title text-center">
+          <h2>About Me</h2>
+        </div>
+      </div>
+      <section id="scroll">
+        <div class="container px-5">
+          <div class="row gx-5 align-items-center">
+            <div class="col-lg-6 order-lg-2">
+              <div class="py-5 px-3"><img class="img-fluid rounded inline-img-border-right" 
+                src="assets/img/carol-avatar.jpg" alt="..." /></div>
+            </div>
+            <div class="col-lg-6 order-lg-1">
+              <div class="p-5">
+                <h3>Who I am...</h3>
+                <p>Hi, I'm Carol! I'm an arts educator and teaching artist and I've spent over
+                  50 years dedicating my
+                  life's work as an advocate for the importance of arts education in the lives of people across
+                  all
+                  ages. In that time, I have had the opportunity to serve in arts education and leadership positions on
+                  local,
+                  state, regional, national and international levels.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Content section 2-->
+      <section>
+        <div class="container px-5">
+          <div class="row gx-5 align-items-center">
+            <div class="col-lg-6">
+              <div class="py-5 px-3"><img class="img-fluid rounded inline-img-border-left"
+                  src="assets/img/carol-images/photos/young/selected/IMG_6841.JPG" alt="..." /></div>
+            </div>
+            <div class="col-lg-6">
+              <div class="p-5">
+                <h3>What I do...</h3>
+                <p>As a consultant, I guide teachers, administrators, curriculum coordinators, after school programs,
+                  arts
+                  in
+                  education programs, arts councils, senior centers, libraries,
+                  - anyone designing, developing and evaluating arts programs for all ages!</p>
+
+                <p>
+                  Additionally, I have developed expertise as an educational puppeteer. I work with pre-service and
+                  in-service teachers, undergraduate and graduate students in Education, sharing strategies on how to
+                  integrate puppetry to enrich the language arts, social studies, health/nutrition/wellness, and science
+                  curricula in grades Pre-K-12.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Content section 3-->
+      <section>
+        <div class="container px-5">
+          <div class="row gx-5 align-items-center">
+            <div class="col-lg-6 order-lg-2">
+              <div class="py-5 px-3"><img class="img-fluid rounded inline-img-border-right"
+                  src="assets/img/carol-images/photos/highschool/selected/IMG_7619.JPG" alt="..." /></div>
+            </div>
+            <div class="col-lg-6 order-lg-1">
+              <div class="p-5">
+                <h3>Education</h3>
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i><span><strong>Barnard College, Columbia
+                        Univerity,</strong>Sociology, B.A.</span></li>
+                  <li><i class="bi bi-chevron-right"></i><span><strong>Teachers College, Columbia University,</strong>
+                    Fine Arts and Arts Education, M.A.</span></li>
+                  <li><i class="bi bi-chevron-right"></i><span><strong>New York Univerity,</strong> Education and
+                      Administration
+                      Professional Diploma</span></li>
+                  <li><i class="bi bi-chevron-right"></i><span>Certified to teach Art & K-12 and eligible to serve as
+                      a School
+                      District
+                      Administrator
+                      and Principal in New York and New Jersey</span></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Content section 4-->
+      <section>
+        <div class="container px-5">
+          <div class="row gx-5 align-items-center">
+            <div class="col-lg-6">
+              <div class="py-5 px-3"><img class="img-fluid rounded inline-img-border-left"
+                  src="assets/img/carol-images/photos/young/selected/IMG_6841.JPG" alt="..." /></div>
+            </div>
+            <div class="col-lg-6">
+              <div class="p-5">
+                <h3>Boards I serve on...</h3>
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i><a href="https://schoolartleague.org/"
+                      target="_blank"><strong>School Art League</strong></a>
+                  </li>
+                  <li><i class="bi bi-chevron-right"></i><a href="https://www.schools.nyc.gov/schools/M310"
+                      target="_blank"><strong>The Judith S.
+                        Kaye High School.</strong></a></li>
+                  <li><i class="bi bi-chevron-right"></i><a href="https://zawadiafrica.org"
+                      target="_blank"><strong>Zawadi Africa Education Fund.</strong></a></li>
+                  <li><i class="bi bi-chevron-right"></i><a href="https://pennypuppets.org/index.html"
+                      target="_blank"><strong>Penny Jones Early
+                        Childhood Puppet Theatre.</strong></a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Content section 5-->
+      <section>
+        <div class="container px-5">
+          <div class="row gx-5 align-items-center">
+            <div class="col-lg-6 order-lg-2">
+              <div class="py-5 px-3"><img class="img-fluid rounded inline-img-border-right"
+                  src="assets/img/carol-images/photos/carol-workshop-uganda.jpg" alt="..." /></div>
+            </div>
+            <div class="col-lg-6 order-lg-1">
+              <div class="p-5">
+                <h3>Some of my accomplishments...</h3>
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i>I Conducted workshops throughout the US, and in many other
+                    countries,
+                    including: Australia, China, Germany, Great Britain, Israel, Japan, Spain, Thailand, India and
+                    Uganda.</li>
+                  <li><i class="bi bi-chevron-right"></i>I was selected as a Fulbright Program Specialst and conducted
+                    arts education workshops in Uganda (2012), and India (2015).</li>
+                  <li><i class="bi bi-chevron-right"></i>I received the Distinguished Service Award for Arts
+                    Education presented by the John F. Kennedy Center for the Performing Arts in Washington, D.C.,
+                  </li>
+                  </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Content section 4-->
+      <section>
+        <div class="container px-5">
+          <div class="row gx-5 align-items-center">
+            <div class="col-lg-6">
+              <div class="py-5 px-3"><img class="img-fluid rounded inline-img-border-left"
+                  src="assets/img/Picture1.jpg" alt="..." /></div>
+            </div>
+            <div class="col-lg-6">
+              <div class="p-5">
+                <ul>
+                  <li><i class="bi bi-chevron-right"></i> I served as President of UNIMA-USA, The American Center of the
+                    Union Internationale de la Marionette. Promoting international friendship and understanding through
+                    the art of puppetry.</li>
+                  <li><i class="bi bi-chevron-right"></i>I was invited to The White House where I was recognized for
+                    my
+                    contribution to education reform efforts.</li>
+                  <li><i class="bi bi-chevron-right"></i><span>I formerly served on the <a
+                        href="https://www.hensonfoundation.org/" target="_blank"><strong>Jim Henson Foundation
+                          Board</strong></a>and I am
+                      continuing to serve as a consultant.</span></li>
+                  <li><i class="bi bi-chevron-right"></i><span>I served as a Former Board Member of the <a
+                        href="https://www.pgogny.org/" target="_blank"><strong>Puppetry Guild of
+                          Greater New York.</strong></a></span></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- ======= Portfolio Details Section ======= -->
+      <!-- <section id="about" class="about-page">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -76,11 +250,11 @@
               <h2>About Me</h2>
               <p class="start-paragraph">Hi, I'm Carol! I'm an arts educator and teaching artist and I've spent the over
                 50 years dedicating my
-                life's work as am advocacy platform for the importants of arts education in the lives of people across
+                life's work as an advocate for the importance of arts education in the lives of people across
                 all
-                ages. In that time, I have had to opportunity to serve in arts education and leadership positions on
+                ages. In that time, I have had the opportunity to serve in arts education and leadership positions on
                 local,
-                state, regional, national and international levels</p>
+                state, regional, national and international levels.</p>
               <p>As a consultant, I guide teachers, administrators, curriculum coordinators, after school programs, arts
                 in
                 education programs, arts councils, senior centers, libraries,
@@ -93,28 +267,23 @@
                 curricula in grades Pre-K-12.</p>
             </div>
           </div>
-          <!-- <p>I received my B.A. from Barnard College, Columbia University, M.A. in Fine
-            Arts and Art Education from Teachers College, Columbia University, and Education Administration
-            Professional Diploma from New York University. She is certified to teach art, K-12, and has
-            completed all requirements to serve as a School District Administrator and Principal in New York
-            and New Jersey.</p> -->
         </div>
         <div class="row">
           <div class="col-lg-6">
             <h3>Education</h3>
             <p class="fst-italic">My educational background</p>
             <ul>
-              <li><i class="bi bi-chevron-right"></i><strong>Barnard College, Columbia Univerity</strong>, B.A.</li>
-              <li><i class="bi bi-chevron-right"></i><strong>Teachers College, Columbia University</strong>, Fine Arts
+              <li><i class="bi bi-chevron-right"></i><strong>Barnard College, Columbia Univerity,</strong> Sociology, B.A.</li>
+              <li><i class="bi bi-chevron-right"></i><strong>Teachers College, Columbia University,</strong> Fine Arts
                 and
                 Arts
                 Education, M.A.</li>
-              <li><i class="bi bi-chevron-right"></i><strong>New York Univerity</strong>, Education and Administration
+              <li><i class="bi bi-chevron-right"></i><strong>New York Univerity,</strong> Education and Administration
                 Professional Diploma</li>
               <li><i class="bi bi-chevron-right"></i>Certified to teach Art and K-12 and eligible to serve as a School
                 District
                 Administrator
-                and Principle in New York and New Jersey</li>
+                and Principal in New York and New Jersey</li>
             </ul>
           </div>
 
@@ -126,7 +295,7 @@
               </li>
               <li><i class="bi bi-chevron-right"></i><a href="https://www.schools.nyc.gov/schools/M310" target="_blank"><strong>The Judith S.
                   Kaye High School.</strong></a></li>
-              <li><i class="bi bi-chevron-right"></i><a href="zawadiafrica.org" target="_blank"><strong>Zawadi Africa Education Fund.</strong></a></li>
+              <li><i class="bi bi-chevron-right"></i><a href="https://zawadiafrica.org" target="_blank"><strong>Zawadi Africa Education Fund.</strong></a></li>
               <li><i class="bi bi-chevron-right"></i><a href="https://pennypuppets.org/index.html" target="_blank"><strong>Penny Jones Early
                   Childhood Puppet Theatre.</strong></a></li>
             </ul>
@@ -141,12 +310,13 @@
                   <ul>
                     <li><i class="bi bi-chevron-right"></i>I Conducted workshops throughout the US, and in many other
                       countries,
-                      including: Australia, China, Germany, Great Britain, Israel, Japan, and Spain.</li>
+                      including: Australia, China, Germany, Great Britain, Israel, Japan, Spain, Thailand, India and Uganda.</li>
                     <li><i class="bi bi-chevron-right"></i>I was selected as a Fulbright Program Specialst and conducted
                       arts education workshops in Uganda (2012), and India (2015).</li>
                     <li><i class="bi bi-chevron-right"></i>I received the Distinguished Service Award for Arts
                       Education presented by the John F. Kennedy Center for the Performing Arts in Washington, D.C.,
                     </li>
+                    <li><i class="bi bi-chevron-right"></i> I served as President of UNIMA-USA, The American Center of the Union Internationale de la Marionette. Promoting international friendship and understanding through the art of puppetry.</li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
@@ -154,18 +324,19 @@
                     <li><i class="bi bi-chevron-right"></i>I was invited to The White House where I was recognized for
                       my
                       contribution to education reform efforts.</li>
-                    <li><i class="bi bi-chevron-right"></i>I formerly served on the Jim Henson Foundation Board and I am
-                      continuing to serve as a consultant.</li>
-                    <li><i class="bi bi-chevron-right"></i>I served as a Former Board Member of the Puppetry Guild of
-                      Greater New York.</li>
+                    <li><i class="bi bi-chevron-right"></i><span>I formerly served on the <a href="https://www.hensonfoundation.org/" target="_blank"><strong>Jim Henson Foundation Board</strong></a>and I am
+                      continuing to serve as a consultant.</span></li>
+                    <li><i class="bi bi-chevron-right"></i><span>I served as a Former Board Member of the <a href="https://www.pgogny.org/" target="_blank"><strong>Puppetry Guild of
+                      Greater New York.</strong></a></span></li>
                   </ul>
                 </div>
               </div>
             </div>
           </div>
 
-    </section><!-- End About Section -->
-
+    </section> -->
+      <!-- End About Section -->
+    </div>
   </main><!-- End #main -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
