--- a/public/arts-and-education.html
+++ b/public/arts-and-education.html
@@ -36,23 +36,23 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid rounded"></a> -->
       <!-- Uncomment below if you prefer to use an text logo -->
       <h1 class="logo"><a href="index.html">CAROL STERLING</a></h1>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="about.html">About</a></li>
           <li><a class="nav-link  scrollto" href="gallery.html">Gallery</a></li>
-          <li><a class="nav-link" href="about.html">About</a></li>
-          <li class="dropdown"><a class="active" href="#journal"><span>My Work</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link  scrollto" href="resources.html">Carol in Action</a></li>
+          <li class="dropdown"><a class="nav-link scrollto active" href="index.html#journal"><span>My Work</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="arts-and-education.html">Arts and Education</a></li>
+              <li><a class="nav-link scrollto active" href="arts-and-education.html">Arts and Education</a></li>
               <li><a href="educational-puppetry.html">Educational Pupptery</a></li>
               <li><a href="selected-work.html">Selected Work</a></li>
             </ul>
           </li>
-          <li><a class="nav-link  scrollto" href="resources.html">Resources</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -61,21 +61,22 @@
     </div>
   </header><!-- End Header -->
 
-  <main id="main">
+  <main id="main" class="my-work-container">
 
     <!-- ======= Story Intro Section ======= -->
     <section id="story-intro" class="story-intro">
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/carol-images/photos/Picture1.jpg" class="img-fluid img-inline-paragragh" alt="">
+          <div class="section-title-sm-margin">
+            <h2>ARTS AND EDUCATION</h2>
+          </div>
+          <div class="col-lg-6 order-1 order-lg-2 d-flex img-cont justify-content-end align-items-start">
+            <img src="assets/img/carol-images/photos/Picture1.jpg" 
+            class="img-fluid rounded inline-img-border-right" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <div class="section-title-sm-margin">
-            <h2>ARTS AND EDUCATION</h2>
-        
-            <p>
+            <p class="start-paragraph">
               Carol Sterling brings more than forty years of experience in education reform and
               arts in education as an arts and education consultant to state and local departments of
               education, school districts, state and local arts education and arts agencies.
@@ -93,9 +94,7 @@
               appointments in schools of education in the metropolitan NYC area.
             </p>
           </div>
-          </div>
         </div>
-
       </div>
     </section><!-- End Story Intro Section -->
 
@@ -104,15 +103,17 @@
       <div class="container">
 
         <div class="row content">
-          <div class="col-lg-6">
-            <img src="assets/img/carol-images/photos/2021-09-18/original/Picture2.png" class="img-fluid" alt="">
+          <div class="col-lg-6 d-flex img-cont align-items-start">
+            <img src="assets/img/carol-images/photos/2021-09-18/original/Picture2.png"
+              class="img-fluid rounded inline-img-border-left" alt="">
           </div>
           <div class="col-lg-6 pt-3 pt-lg-0">
             <p class="start-paragraph">
               A passionate advocate for the arts in American society with special emphasis on
               the critical role of arts education in K-12 education, Carol Sterling has been a frequent
               presenter and workshop leader at local, state, national and international conferences. (See
-              selected list under <a href="selected-work.html">'Selected Works'</a>.) She has written about the field of arts and education. (See
+              selected list under <a href="selected-work.html">'Selected Works'</a>.) She has written about the field of
+              arts and education. (See
               selected articles under Resources.) Recognition of her work on behalf of inclusion of the arts
               in education reform earned her an invitation to The White House. She is the recipient of the
               Distinguished Service in Arts Education Award by the Alliance for Arts Education from the John
@@ -132,10 +133,11 @@
         </div>
 
         <div class="row content">
-          <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/carol-images/photos/2021-09-18/original/Picture10.png" class="img-fluid" alt="">
+          <div class="col-lg-6 order-1 order-lg-2 d-flex img-cont justify-content-end align-items-start">
+            <img src="assets/img/carol-images/photos/2021-09-18/original/Picture10.png"
+              class="img-fluid rounded inline-img-border-right" alt="">
           </div>
-          <div class="col-lg-6 order-2 order-lg-1 pt-3 pt-lg-0">
+          <div class="col-lg-6 order-2 order-lg-1 pt-3 pt-lg-0 d-flex flex-column align-self-center">
             <p class="start-paragraph">
               Carol Sterling is a graduate of Teachers College, Columbia University (MA in Fine
               Arts and Art Education). She received an Education Administration Professional Certificate from
