--- a/public/educational-puppetry.html
+++ b/public/educational-puppetry.html
@@ -36,23 +36,23 @@
   <header id="header" class="fixed-top header-inner-pages">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid rounded"></a> -->
       <!-- Uncomment below if you prefer to use an text logo -->
       <h1 class="logo"><a href="index.html">CAROL STERLING</a></h1>
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="about.html">About</a></li>
           <li><a class="nav-link  scrollto" href="gallery.html">Gallery</a></li>
-          <li><a class="nav-link" href="about.html">About</a></li>
-          <li class="dropdown"><a class="active" href="#journal"><span>My Work</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link  scrollto" href="resources.html">Carol in Action</a></li>
+          <li class="dropdown"><a class="nav-link scrollto active" href="index.html#journal"><span>My Work</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="arts-and-education.html">Arts and Education</a></li>
-              <li><a href="educational-puppetry.html">Educational Pupptery</a></li>
+              <li><a class="nav-link scrollto active" href="educational-puppetry.html">Educational Pupptery</a></li>
               <li><a href="selected-work.html">Selected Work</a></li>
             </ul>
           </li>
-          <li><a class="nav-link  scrollto" href="resources.html">Resources</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -61,20 +61,23 @@
     </div>
   </header><!-- End Header -->
 
-  <main id="main">
+  <main id="main" class="my-work-container">
 
     <!-- ======= Story Intro Section ======= -->
     <section id="story-intro" class="story-intro">
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/carol-images/photos/highschool/selected/IMG_5194.JPG" class="img-fluid img-inline-paragragh" alt="">
+          <div class="section-title-sm-margin">
+            <h2>Educational Puppetry</h2>
+          </div>
+          <div class="col-lg-6 order-1 order-lg-2 d-flex img-cont justify-content-end align-items-start">
+            <img src="assets/img/carol-images/photos/highschool/selected/IMG_5194.JPG"
+              class="img-fluid rounded inline-img-border-right" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <div class="section-title-sm-margin">
-            <h2>Educational Puppetry</h2>
-            <p>Carol Sterling is an arts and education consultant with expertise in educational puppetry and
+            <p class="start-paragraph">
+              Carol Sterling is an arts and education consultant with expertise in educational puppetry and
               arts administration. She began her work as an art educator in elementary and high schools.
               Subsequently she taught courses in Integrating the Arts into the K-12 Curriculum to pre-service
               and in-service teachers at colleges and universities, conducted workshops for teachers and
@@ -94,7 +97,6 @@
               television program, “Shalom Corner, “ that featured puppets prominently while teaching about
               Jewish heritage and traditions.
             </p>
-            </div>
           </div>
         </div>
 
@@ -106,8 +108,9 @@
       <div class="container">
 
         <div class="row content">
-          <div class="col-lg-6">
-            <img src="assets/img/carol-images/photos/2021-09-18/original/Picture3-resized.png" class="img-fluid" alt="">
+          <div class="col-lg-6 d-flex img-cont align-items-start">
+            <img src="assets/img/carol-images/photos/2021-09-18/original/Picture3-resized.png"
+              class="img-fluid rounded inline-img-border-left" alt="">
           </div>
           <div class="col-lg-6 pt-3 pt-lg-0">
             <p class="start-paragraph">
@@ -133,8 +136,9 @@
         </div>
 
         <div class="row content">
-          <div class="col-lg-6 order-1 order-lg-2">
-            <img src="assets/img/carol-images/photos/2021-09-18/original/Picture6.png" class="img-fluid" alt="">
+          <div class="col-lg-6 order-1 order-lg-2 d-flex img-cont justify-content-end align-items-start">
+            <img src="assets/img/carol-images/photos/2021-09-18/original/Picture6.png"
+              class="img-fluid rounded inline-img-border-right" alt="">
           </div>
           <div class="col-lg-6 order-2 order-lg-1 pt-3 pt-lg-0">
             <p class="start-paragraph">
@@ -159,8 +163,9 @@
         </div>
 
         <div class="row content">
-          <div class="col-lg-6">
-            <img src="assets/img/carol-images/photos/young/selected/IMG_2259.JPG" class="img-fluid" alt="">
+          <div class="col-lg-6 d-flex align-items-start img-cont align-items-start">
+            <img src="assets/img/carol-images/photos/young/selected/IMG_2259.JPG"
+              class="img-fluid rounded inline-img-border-left" alt="">
           </div>
           <div class="col-lg-6 pt-3 pt-lg-0">
             <p class="start-paragraph">In July 2011, Ms. Sterling retired from her position as Arts in Education
