--- a/public/resources.html
+++ b/public/resources.html
@@ -42,18 +42,17 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="about.html">About</a></li>
           <li><a class="nav-link  scrollto" href="gallery.html">Gallery</a></li>
-          <li><a class="nav-link" href="about.html">About</a></li>
-          <li class="dropdown"><a href="#journal"><span>My Work</span> <i
-                class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link  scrollto active" href="resources.html">Carol in Action</a></li>
+          <li class="dropdown"><a href="index.html#journal"><span>My Work</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="arts-and-education.html">Arts and Education</a></li>
               <li><a href="educational-puppetry.html">Educational Pupptery</a></li>
               <li><a href="selected-work.html">Selected Work</a></li>
             </ul>
           </li>
-          <li><a class="nav-link  scrollto active" href="resources.html">Resources</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -66,11 +65,11 @@
   <main id="main">
 
     <!-- ======= Blog Grid ======= -->
-    <div id="journal-blog" class="text-left  paddsections">
+    <div id="journal-blog" class="text-left paddsections">
 
       <div class="container">
         <div class="section-title text-center">
-          <h2>resources</h2>
+          <h2>Carol In Action</h2>
         </div>
       </div>
 
@@ -80,13 +79,81 @@
 
             <div class="col-lg-4 col-md-6">
               <div class="journal-info mb-30">
-
-                <a href="assets/resources/carol-sterling-fulbright.pdf" target="_blank"><img
-                    src="assets/img/resources/presentation1.png" class="img-responsive img-border" alt="img"></a>
+              
+                  <iframe class="img-border rounded" src="https://www.youtube.com/embed/_91LtaCzIAI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" width="416" height="314" allowfullscreen></iframe>
 
                 <div class="journal-txt">
 
-                  <h4><a href="assets/resources/carol-sterling-fulbright.pdf" target="_blank">MY EXPERIENCE SERVING AS A FULLBRIGHT
+                  <h4><a href="https://youtu.be/_91LtaCzIAI" target="_blank">HOW TO MAKE PUPPETS FROM RECYCLED MATERIALS</a></h4>
+                  <p class="separator">Instructional Video
+                  </p>
+
+                </div>
+
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="journal-info mb-30">
+
+                <a href="assets/resources/puppetry-presentation-for-jean-marie-keevins.pdf" target="_blank"><img
+                    src="assets/img/resources/adventure-ppt-cover.png" class="img-responsive img-border rounded" alt="img"></a>
+
+                <div class="journal-txt">
+
+                  <h4><a href="assets/resources/puppetry-presentation-for-jean-marie-keevins.pdf"
+                      target="_blank">ADVENTURES IN
+                      EDUCATIONAL PUPPETRY</a></h4>
+                  <p class="separator">Presentation
+                  </p>
+
+                </div>
+
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="journal-info mb-30">
+                  <iframe  class="img-border rounded" src="https://player.vimeo.com/video/688040812?h=9101cf2f15" width="416" height="314" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+
+                <div class="journal-txt">
+
+                  <h4><a href="https://vimeo.com/688040812" target="_blank">EDUCATIONAL PUPPETEERS IN CONVERSTATION: CAROL STERLING & EDNA BLAND</a></h4>
+                  <p class="separator">Converstational Video
+                  </p>
+
+                </div>
+
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="journal-info mb-30">
+                <!-- <iframe src="https://onedrive.live.com/embed?cid=99DD970EBAE35D0B&resid=99DD970EBAE35D0B%212463&authkey=ACGjGZdI3JmdPLk" width="320" height="180" frameborder="0" scrolling="no" allowfullscreen></iframe> -->
+                  <!-- <iframe  class="img-border" src="https://onedrive.live.com/embed?cid=99DD970EBAE35D0B&resid=99DD970EBAE35D0B%212463&authkey=ACGjGZdI3JmdPLk" width="416" height="314" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe> -->
+                  <iframe class="img-border rounded" src="https://drive.google.com/file/d/1NaQm_ti8c2uXMR-Sj_rBOmZORJGJUFBZ/preview" width="416" height="314" allow="autoplay" allowfullscreen></iframe>
+
+                <div class="journal-txt">
+
+                  <h4><a href="https://drive.google.com/file/d/1NaQm_ti8c2uXMR-Sj_rBOmZORJGJUFBZ/view?usp=sharing" target="_blank">FULBRIGHT PROGRAM SPECIALIST IN INDIA</a></h4>
+                  <p class="separator">Instructional Video
+                  </p>
+
+                </div>
+
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6">
+              <div class="journal-info mb-30">
+
+                <a href="assets/resources/carol-sterling-fulbright.pdf" target="_blank"><img
+                    src="assets/img/resources/fulbright-ppt-cover.png" class="img-responsive img-border rounded" alt="img"></a>
+
+                <div class="journal-txt">
+
+                  <h4><a href="assets/resources/carol-sterling-fulbright.pdf" target="_blank">MY EXPERIENCE SERVING AS A
+                      FULLBRIGHT
                       SPECIALIST</a></h4>
                   <p class="separator">Presentation
                   </p>
@@ -99,30 +166,13 @@
             <div class="col-lg-4 col-md-6">
               <div class="journal-info mb-30">
 
-                <a href="assets/resources/puppetry-presentation-for-jean-marie-keevins.pdf" target="_blank"><img
-                    src="assets/img/resources/presentation1.png" class="img-responsive img-border" alt="img"></a>
-
-                <div class="journal-txt">
-
-                  <h4><a href="assets/resources/puppetry-presentation-for-jean-marie-keevins.pdf" target="_blank">ADVENTURES IN
-                      EDUCATIONAL PUPPETRY</a></h4>
-                  <p class="separator">Presentation
-                  </p>
-
-                </div>
-
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-              <div class="journal-info mb-30">
-
                 <a href="assets/resources/promoting-yourself-as-an-educational-puppeteer.pdf" target="_blank"><img
-                    src="assets/img/resources/handout1.png" class="img-responsive img-border" alt="img"></a>
+                    src="assets/img/resources/handout1.png" class="img-responsive img-border rounded" alt="img"></a>
 
                 <div class="journal-txt">
 
-                  <h4><a href="assets/resources/promoting-yourself-as-an-educational-puppeteer.pdf" target="_blank">PROMOTING YOURSELF
+                  <h4><a href="assets/resources/promoting-yourself-as-an-educational-puppeteer.pdf"
+                      target="_blank">PROMOTING YOURSELF
                       AS AN EDUCATIONAL PUPPETEER</a></h4>
                   <p class="separator">Handout
                   </p>
@@ -136,11 +186,12 @@
               <div class="journal-info mb-30">
 
                 <a href="assets/resources/2022-resources-for-puppetry-in-education.pdf" target="_blank"><img
-                    src="assets/img/resources/handout1.png" class="img-responsive img-border" alt="img"></a>
+                    src="assets/img/resources/handout1.png" class="img-responsive img-border rounded" alt="img"></a>
 
                 <div class="journal-txt">
 
-                  <h4><a href="assets/resources/2022-resources-for-puppetry-in-education.pdf" target="_blank">RESOURCES FOR PUPPETRY IN
+                  <h4><a href="assets/resources/2022-resources-for-puppetry-in-education.pdf" target="_blank">RESOURCES
+                      FOR PUPPETRY IN
                       EDUCATION</a></h4>
                   <p class="separator">Handout
                   </p>
@@ -154,33 +205,14 @@
               <div class="journal-info mb-30">
 
                 <a href="assets/resources/puppetry-workforce-competency-skills.pdf" target="_blank"><img
-                    src="assets/img/resources/handout1.png" class="img-responsive img-border" alt="img"></a>
+                    src="assets/img/resources/handout1.png" class="img-responsive img-border rounded" alt="img"></a>
 
                 <div class="journal-txt">
 
-                  <h4><a href="assets/resources/puppetry-workforce-competency-skills.pdf" target="_blank">PUPPETRY WORKFORCE
+                  <h4><a href="assets/resources/puppetry-workforce-competency-skills.pdf" target="_blank">PUPPETRY
+                      WORKFORCE
                       COMPETENCY</a></h4>
                   <p class="separator">Handout
-                  </p>
-
-                </div>
-
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-              <div class="journal-info mb-30">
-                <!-- <iframe
-                  src="https://onedrive.live.com/embed?cid=99DD970EBAE35D0B&resid=99DD970EBAE35D0B%212463&authkey=ACGjGZdI3JmdPLk"
-                  width="320" height="180" frameborder="0" scrolling="no" allowfullscreen></iframe> -->
-
-                <a href="https://1drv.ms/v/s!Agtd47oOl92Zkx9T86oshxXlRtMn" target="_blank"><img src="assets/img/resources/video1.png" class="img-responsive img-border"
-                    alt="img"></a>
-
-                <div class="journal-txt">
-
-                  <h4><a href="https://1drv.ms/v/s!Agtd47oOl92Zkx9T86oshxXlRtMn" target="_blank">HOW TO CREATE RECYCLED PUPPETS</a></h4>
-                  <p class="separator">Instructional Video
                   </p>
 
                 </div>
